home - fixing hero hover jump

--- a/css/edpsy-style.css
+++ b/css/edpsy-style.css
@@ -2370,6 +2370,9 @@ h1.title {
 .skt-section .overlap-img-title a:hover, .skt-section .overlap-img-title a:active {
   box-shadow: 0px 0px 12px #8c8a8a;
   background: none;
+}
+.skt-section .overlap-img-title a {
+  display: block;
   line-height: 0;
   /* .home .promo {
 	margin-left: 10px;
