--- a/scss/_page-headings.scss
+++ b/scss/_page-headings.scss
@@ -66,7 +66,11 @@ vertical-align: center;
 .skt-section .overlap-img-title a:hover, .skt-section .overlap-img-title a:active {
     box-shadow: 0px 0px 12px #8c8a8a;
     background: none;
-    line-height: 0;
+}
+
+.skt-section .overlap-img-title a {
+  display: block;
+  line-height: 0;
 }
 
 /* .home .promo {
